--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
-  },
-  "devDependencies": {
+    "react-router-dom": "^6.18.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
@@ -27,5 +25,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "sass": "^1.69.5",
     "vite": "^4.4.5"
+  },
+  "devDependencies": {
   }
 }
