--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi-browser": "^13.4.0"
   }
 }
