--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "joi-browser": "^13.4.0"
+    "joi-browser": "^13.4.0",
+    "toast": "^0.5.4"
   }
 }
