--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "express": "^4.18.2",
     "joi-browser": "^13.4.0",
+    "react-toastify": "^9.1.3",
     "toast": "^0.5.4"
   }
 }
