--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,6 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.7",
-    "graphql": "^16.8.1",
-    "jwt-decode": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
@@ -23,6 +18,12 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "graphql": "^16.8.1",
+    "jwt-decode": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
     "vite": "^4.4.5"
   }
