--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "joi-browser": "^13.4.0",
     "react-toastify": "^9.1.3",
-    "toast": "^0.5.4"
+    "toast": "^0.5.4",
+    "toastify": "^2.0.1"
   }
 }
