--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.2",
     "express": "^4.18.2",
     "joi-browser": "^13.4.0",
+    "react-bootstrap": "^2.9.1",
     "react-toastify": "^9.1.3",
     "toast": "^0.5.4",
     "toastify": "^2.0.1"
