--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "apollo-server": "^3.13.0",
     "express": "^4.18.2",
+    "mongoose": "^8.0.1",
     "react-bootstrap": "^2.9.1"
   }
 }
