--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "react-bootstrap": "^2.9.1",
-    "toast": "^0.5.4",
+    "toast": "^0.5.4"
   }
 }
