changed all mentions of boilerplate

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-boilerplate",
+  "name": "project-familyblues",
   "private": true,
   "version": "0.0.0",
   "type": "module",
