--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-boilerplate",
+  "name": "project-familyblues",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
