--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "bootstrap": "^5.3.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -21,8 +22,11 @@
     "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-favicon": "^2.0.3",
     "react-router-dom": "^6.18.0",
+    "react-select": "^5.8.0",
     "sass": "^1.69.5",
     "vite": "^4.4.5"
   }
