--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "apollo-server": "^2.26.2",
+    "apollo-server-express": "^2.26.2",
+    "graphql": "^14.7.0",
+    "react": "^18.2.0"
   }
 }
